Apply idea code analysis suggestions I-L